2012-04-24  James Robinson  <jamesr@chromium.org>

        [chromium] Move ProgramBinding definitions to LayerRendererChromium and normalize naming
        https://bugs.webkit.org/show_bug.cgi?id=84808

        Reviewed by Adrienne Walker.

        Add some includes needed by this test that were previously picked up by upstream headers.

        * tests/CCLayerTreeHostImplTest.cpp:

2012-04-26  Ilya Sherman  <isherman@chromium.org>

        [Chromium] Security: Autofill info can be captured by innocuous social engineering
        Prevent users from interacting with invisible popups rendered outside the main frame's contents view.
        https://bugs.webkit.org/show_bug.cgi?id=84420
        https://code.google.com/p/chromium/issues/detail?id=122925

        Reviewed by Kent Tamura.

        * src/ChromeClientImpl.cpp:
        (WebKit::ChromeClientImpl::popupOpened): Hide popups rendered outside the main frame's contents view.
        * src/WebViewImpl.cpp:
        (WebKit::WebViewImpl::applyAutofillSuggestions): Fix up order of operations to support immediately hiding a popup if it would not be visible

2012-04-26  Dana Jansens  <danakj@chromium.org>

        [chromium] Some background filters require inflating damage on the surface behind them
        https://bugs.webkit.org/show_bug.cgi?id=84479

        Reviewed by Adrienne Walker.

        * tests/CCDamageTrackerTest.cpp:
        (WebKitTests::TEST_F):
        (WebKitTests):

2012-04-26  Aaron Colwell  <acolwell@chromium.org>

        Cleanup WebMediaPlayer enum values that didn't match Chromium style guidelines
        https://bugs.webkit.org/show_bug.cgi?id=84998

        Reviewed by Darin Fisher.

        * public/WebMediaPlayer.h:
        (WebKit::WebMediaPlayer::generateKeyRequest):
        (WebKit::WebMediaPlayer::addKey):
        (WebKit::WebMediaPlayer::cancelKeyRequest):

2012-04-26  Shawn Singh  <shawnsingh@chromium.org>
