@@ -1,3 +1,13 @@
+2012-04-27  Marcus Bulach  <bulach@chromium.org>
+
+        [chromium] Disables a few webkit_unittests.
+        https://bugs.webkit.org/show_bug.cgi?id=85052
+
+        Unreviewed build fix.
+
+        * tests/PopupMenuTest.cpp:
+        (WebKit::TEST_F):
+
 2012-04-24  James Robinson  <jamesr@chromium.org>
 
         [chromium] Move ProgramBinding definitions to LayerRendererChromium and normalize naming
